# raw-to-srt-GUI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat  compile.sh  compile_commands.json
.cache/clangd/index/: App.cpp.48E30AA2B18D7B46.idx  App.cpp.51CC886C87203A00.idx  App.h.07723E8FB8384509.idx  App.h.717A810E1E2DF489.idx  AppConfig.h.90E3ACF715EEA3A2.idx  AppConfig.h.DF12AF591A3AAF80.idx  AudioSinks.h.8A9F851AD2989C95.idx  glfw3.h.1E45E01C3A936EEF.idx  glfw3.h.48923CED6D9B75F9.idx  glfw3native.h.E869F9EF6A07A6CE.idx  imconfig.h.06BF93B8A93A942B.idx  imconfig.h.5D561E6DB1E28ADD.idx  imgui.cpp.312ED478EBB510DB.idx  imgui.cpp.A0E3B3F82FD2D56D.idx  imgui.h.41636EAF19EA9BD1.idx  imgui.h.F9D6D279403850AF.idx  imgui_draw.cpp.74CF316EEA435749.idx  imgui_draw.cpp.88C3BCB773F8AD4E.idx  imgui_impl_glfw.cpp.90C1D19035118C44.idx  imgui_impl_glfw.cpp.EDE72BAB91062D00.idx  imgui_impl_glfw.h.77CB69DE29A2E6E5.idx  imgui_impl_glfw.h.C571C81E9FCAC29B.idx  imgui_impl_vulkan.cpp.49B0D379DD169F9B.idx  imgui_impl_vulkan.cpp.FBBB144E5F177272.idx  imgui_impl_vulkan.h.9124F94319ECEEE5.idx  imgui_impl_vulkan.h.A7767009B773CAA4.idx  imgui_internal.h.3AB1962E277E51D8.idx  imgui_internal.h.F68717B8D31530C4.idx  imgui_tables.cpp.463618A07475E18E.idx  imgui_tables.cpp.FD921D4B1979C3B5.idx  imgui_widgets.cpp.3032DA46C26A80F7.idx  imgui_widgets.cpp.A28A8F8E9808C211.idx  imstb_rectpack.h.5744157D0C8E1371.idx  imstb_rectpack.h.D13A31434A5BDB1D.idx  imstb_textedit.h.65A8CFD3E9FFF8DF.idx  imstb_textedit.h.B471533B7E24D7D1.idx  imstb_truetype.h.21B717361C030DB5.idx  imstb_truetype.h.DF8A2F92860509FA.idx  json.hpp.081D4B655F953C51.idx  json.hpp.E2348651E6F41D98.idx  (+7 more)
raw-to-srt-GUI/src/: main.cpp
raw-to-srt-GUI/src/App/: App.cpp  App.h
raw-to-srt-GUI/src/AppConfig/: AppConfig.h
raw-to-srt-GUI/vendors/imgui/: imgui_impl_glfw.cpp
(+1 files in other folders)
